Dark mode fixes

--- a/src/components/BaseContainer/styles.styl
+++ b/src/components/BaseContainer/styles.styl
@@ -12,7 +12,7 @@
 }
 
 .dark{
-  background: linear-gradient(180deg, #363636 0%, #000000 180.99%);
+  background: linear-gradient(180deg, #242525 0%, #000 180%);
   width:100%;
   min-height: calc(100vh - 74px);
   padding-top:42px;
