--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -297,7 +297,7 @@
         max-height: 46px;
 
         a {
-          color: #ffffff;
+          color: #0e0e10;
         }
       }
     }
